k8s/traefik/gke_ingress.yml
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: managed-cert
# spec:
#   domains:
#     - "tacomawatersheds.com"
#     - "www.tacomawatersheds.com"
#     - "dev.tacomawatersheds.com"
#     - "www.dev.tacomawatersheds.com"
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "traefik-ip"
    # networking.gke.io/managed-certificates: managed-cert
    # kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stormpiper
            port:
              number: 80

### This works for https!!! do not delete or change this!
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: basic-ingress
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: "traefik-ip"
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: stormpiper
#             port:
#               number: 80

          










# spec:
#   defaultBackend:
#     service:
#       name: stormpiper
#       port:
#         number: 80
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: web
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       run: web
#   template:
#     metadata:
#       labels:
#         run: web
#     spec:
#       containers:
#       # - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
#       - image: tiangolo/uvicorn-gunicorn-fastapi:python3.9-slim
#         imagePullPolicy: IfNotPresent
#         name: web
#         ports:
#         - containerPort: 80
#           protocol: TCP
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: web
#   namespace: default
# spec:
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#   selector:
#     app: stormpiper
#     # type: stormpiper-pod
#   type: NodePort
