k8s/traefik/traefik-ingress.yml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: simpleingressroute
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`localhost`) && PathPrefix(`/notls`)
#       kind: Rule
#       services:
#         - name: whoami
#           port: 80
#       middlewares:
#         - name: https-redirect

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: https
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`localhost`) && PathPrefix(`/tls`)
#       kind: Rule
#       services:
#         - name: whoami
#           port: 80
#   tls:
#     certResolver: myresolver

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`localhost`) && PathPrefix(`/tls`)
#       kind: Rule
#       services:
#         - name: whoami
#           port: 80
#       middlewares:
#         - name: https-redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`)
      kind: Rule
      services:
        - name: stormpiper
          port: 80
      middlewares:
        - name: https-redirect
    - match: Host(`dev.localhost`)
      kind: Rule
      services:
        - name: stormpiper-dev
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`localhost`)
      kind: Rule
      services:
        - name: stormpiper
          port: 80
    - match: Host(`dev.localhost`)
      kind: Rule
      services:
        - name: stormpiper-dev
          port: 80
  tls:
    certResolver: myresolver
